first edition update

--- a/src/project_data/projects.json
+++ b/src/project_data/projects.json
@@ -3,9 +3,10 @@
     {
         "title":"Project Bank-Heist",
         "description":"This application provides a rudimentary online banking template. It is a full stack application that primarily utilises Node.js and it employs the MVC pattern.",
-        "deployment-link": "https://peaceful-lassen-volcanic-80125.herokuapp.com/",
-        "github-link":"https://github.com/ChrisAylen/project-bank-heist",
+        "deployment": "https://peaceful-lassen-volcanic-80125.herokuapp.com/",
+        "github":"https://github.com/ChrisAylen/project-bank-heist",
         "image":"../images/project-bank-heist.JPG",
+        "skills":["html","css","javascript", "sql","express.js","sequelize", "handlebar.js","node.js", "mysql" ],
         "languages":["html","css","javascript", "sql"],
         "framework":["express.js","sequelize", "handlebar.js" ],
         "others":["node.js", "mysql"]
@@ -15,8 +16,9 @@
         "title":"The Tech Blog",
         "description":"This application provides a rudimentary Tech Blog template. It is a full stack application that primarily utilises Node.js and it employs the MVC pattern.",
         "image":"../images/week14.JPG",
-        "deployment-link":"https://week14-coursework.herokuapp.com/",
-        "github-link":"https://github.com/shingchan95/week14-coursework",
+        "deployment":"https://week14-coursework.herokuapp.com/",
+        "github":"https://github.com/shingchan95/week14-coursework",
+        "skills":["html","css","javascript", "sql", "express.js","sequelize", "handlebar.js","node.js","mysql"],
         "languages":["html","css","javascript", "sql"],
         "framework":["express.js","sequelize", "handlebar.js" ],
         "others":["node.js","mysql"]
@@ -26,8 +28,9 @@
         "title": "Weather Forecast With Map Click",
         "description":"This application provides a Weather Forecast websiite using Google Map API and OpenWeather API. It allows user to click anywhere in the map and allocate the weather forecast detail using the Fetch API .",
         "image":"../images/project 1.PNG",
-        "deployment-link":"https://shingchan95.github.io/know-your-city/",
-        "github-link":"https://github.com/shingchan95/know-your-city",
+        "deployment":"https://shingchan95.github.io/know-your-city/",
+        "github":"https://github.com/shingchan95/know-your-city",
+        "skills":["html","css","javascript","third part apis"],
         "languages":["html","css","javascript"],
         "framework":[],
         "others":["third part apis"]
@@ -39,8 +42,9 @@
         "title":"Work Day Scheduler",
         "description":"This application provides a Work Day Scheduler template. It is a fron-end application that primarily utilises Javascript & Localstorage , allows user to save data to their local storage across browser sessions.",
         "image":"../images/week5.PNG",
-        "deployment-link":"https://shingchan95.github.io/week5-coursework/",
-        "github-link":"https://github.com/shingchan95/week5-coursework" ,
+        "deployment":"https://shingchan95.github.io/week5-coursework/",
+        "github":"https://github.com/shingchan95/week5-coursework" ,
+        "skills":["html","css","javascript","local storage"],
         "languages":["html","css","javascript"],
         "framework":[],
         "others":["local storage"]
