--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-react-portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://shingchan95.github.io",
+  "homepage": "https://shingchan95.github.io/portfolio_page_react/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
