path change on images

--- a/src/project_data/projects.json
+++ b/src/project_data/projects.json
@@ -6,7 +6,7 @@
         "description":"This application provides a rudimentary online banking template. It is a full stack application that primarily utilises Node.js and it employs the MVC pattern.",
         "deployment": "https://peaceful-lassen-volcanic-80125.herokuapp.com/",
         "github":"https://github.com/ChrisAylen/project-bank-heist",
-        "image":"./images/project-bank-heist.JPG",
+        "image":"../assets/images/project-bank-heist.JPG",
         "skills":["html","css","javascript", "sql","express.js","sequelize", "handlebar.js","node.js", "mysql" ],
         "languages":["html","css","javascript", "sql"],
         "framework":["express.js","sequelize", "handlebar.js" ],
@@ -17,7 +17,7 @@
         "id":2,
         "title":"The Tech Blog",
         "description":"This application provides a rudimentary Tech Blog template. It is a full stack application that primarily utilises Node.js and it employs the MVC pattern.",
-        "image":"./images/week14.JPG",
+        "image":"../assets/images/week14.JPG",
         "deployment":"https://week14-coursework.herokuapp.com/",
         "github":"https://github.com/shingchan95/week14-coursework",
         "skills":["html","css","javascript", "sql", "express.js","sequelize", "handlebar.js","node.js","mysql"],
@@ -29,7 +29,7 @@
     {   "id":3,
         "title": "Weather Forecast With Map Click",
         "description":"This application provides a Weather Forecast websiite using Google Map API and OpenWeather API. It allows user to click anywhere in the map and allocate the weather forecast detail using the Fetch API .",
-        "image":"./images/project 1.PNG",
+        "image":"../assets/images/project 1.PNG",
         "deployment":"https://shingchan95.github.io/know-your-city/",
         "github":"https://github.com/shingchan95/know-your-city",
         "skills":["html","css","javascript","third part apis"],
@@ -40,7 +40,7 @@
     {   "id":4,
         "title":"Hello World Social Networking",
         "description":"The application provides a social network enviroment. It is a full stack application that primarily utilises Node.js, GraphQL, MongoDB/Mongoose and React.",
-        "image":"./images/week5.PNG",
+        "image":"../assets/images/week5.PNG",
         "deployment":"https://shielded-mesa-02928.herokuapp.com/",
         "github":"https://github.com/shingchan95/hello-world-social-networking" ,
         "skills":["html","css","javascript","react"],
@@ -51,7 +51,7 @@
     {   "id":5,
         "title":"Work Day Scheduler",
         "description":"This application provides a Work Day Scheduler template. It is a fron-end application that primarily utilises Javascript & Localstorage , allows user to save data to their local storage across browser sessions.",
-        "image":"./images/week5.PNG",
+        "image":"../assets/images/week5.PNG",
         "deployment":"https://shingchan95.github.io/Work-day-schedule/",
         "github":"https://github.com/shingchan95/week5-coursework" ,
         "skills":["html","css","jquery","local storage"],
@@ -62,7 +62,7 @@
     {   "id":6,
         "title":"README-generator",
         "description":"The application can dynamically generates a professional README.md file from a user's input using the Inquirer package.",
-        "image":"./images/week5.PNG",
+        "image":"../assets/images/week5.PNG",
         "deployment":"",
         "github":"https://github.com/shingchan95/README-generator" ,
         "skills":["javascript", "nodejs", "inquirer"],
@@ -73,7 +73,7 @@
     {   "id":7,
         "title":"react-portfolio",
         "description":"This application provides a portfolio created using react.js and tailwind. It is a component based front-end framework which ultimately boosts the speed of the development process.",
-        "image":"./images/week5.PNG",
+        "image":"../assets/images/week5.PNG",
         "deployment":"https://shingchan95.github.io/portfolio_page_react/",
         "github":"https://github.com/shingchan95/portfolio_page_react" ,
         "skills":["html","css","javascript","react"],
